# FarpStackTemplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client/: package-lock.json  package.json
server/: .env.exemple  Makefile  pyproject.toml
server/api/: __init__.py  config.py  database.py  models.py  roles.py  routes.py
server/api/auth/: __init__.py  auth_controller.py  auth_service.py
server/api/auth/dto/: __init__.py  google_user_dto.py  login_dto.py
server/api/auth/guard/: __init__.py  auth_guard.py  owner_guard.py
server/api/auth/strategies/: __init__.py  default_strategy.py  google_strategy.py
server/api/user/: user_controller.py  user_model.py  user_repository.py  user_service.py
server/api/user/dto/: __init__.py  create_user_dto.py  filter_user_dto.py  update_user_dto.py  user_dto.py
server/api/user/strategies/: __init__.py  default_strategy.py  google_strategy.py
server/api/utils/: __init__.py  jwt.py  logger.py  responses.py  validators.py
server/migrations/: env.py
server/migrations/versions/: 758923b86813_v1__creating_users_table.py
server/tests/: conftest.py
server/tests/user/controller/: sign_up_test.py
